--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -16,6 +16,8 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
-    <slot />
+    <main class="mt-10">
+      <slot />
+    </main>
   </body>
 </html>
