chore: Update PokemonCard component to use link for better navigation

--- a/src/components/pokemons/PokemonCard.astro
+++ b/src/components/pokemons/PokemonCard.astro
@@ -23,10 +23,11 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
   <!-- w-26 h-26 isBig -->
   <!-- w-16 h-16 !isBig -->
   <img
+    transition:name={`${name}-image`}
     class:list={[
       {
         'w-26 h-26': isBig,
-        'w-16 h-16': !isBig,
+        'w-22 h-22': !isBig,
       },
     ]}
     src={imageSrc}
