--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,6 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
+
 interface Props {
   title: string;
 }
@@ -14,6 +16,8 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <!-- Required -->
     <title>{title}</title>
+
+    <ViewTransitions />
   </head>
   <body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
     <main class="mt-10">
