--- a/src/components/pokemons/PokemonCard.astro
+++ b/src/components/pokemons/PokemonCard.astro
@@ -10,7 +10,7 @@ const id = url.split('/').at(-2);
 const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/${id}.png`;
 ---
 
-<!-- class={`rounded  flex flex-col justify-center items-center p-2 ${!isBig && 'border'}`} -->
+<!-- class={`rounded  flex flex-col justify-center items-center p-2 ${!isBig && 'border'}`} --><!-- href={`/pokemons/${name}`} --><!-- href={`/pokemon/${id}`} -->
 <a
   href={`/pokemons/${name}`}
   class:list={[
