--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,11 +1,18 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+import { siteInfo } from 'src/consts/site-info';
 
 interface Props {
-  title: string;
+  title?: string;
+  image?: string;
+  description?: string;
 }
 
-const { title } = Astro.props;
+const {
+  title = siteInfo.title,
+  description = siteInfo.description,
+  image,
+} = Astro.props;
 ---
 
 <html lang="en">
@@ -14,6 +21,16 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+
+    <!-- SEO -->
+    <meta name="description" content={description} />
+    <meta name="author" content={'Fernando Herrera'} />
+
+    <!-- OG Metatags -->
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content={image} />
+
     <!-- Required -->
     <title>{title}</title>
 
