chore: Update MainLayout to include Pokémon information

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -35,7 +35,12 @@ const {
     <title>{title}</title>
 
     <ViewTransitions />
+    <!-- <style>
+      @view-transition {
+        navigation: auto; /* enabled! */
+      } -->
   </head>
+
   <body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
     <main class="mt-10">
       <slot />
