chore: Update npm dependencies and add Astro Icon integration

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -44,7 +44,7 @@ const {
 
   <body class="bg-slate-800 text-slate-100">
     <NavBar />
-    <main class="mt-10 m-auto max-w-3xl">
+    <main class="mt-10 m-auto max-w-3xl mx-4">
       <slot />
     </main>
   </body>
