--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,7 +1,8 @@
 ---
+import Title from '@components/shared/Title.astro';
 import MainLayout from '@layouts/MainLayout.astro';
 ---
 
 <MainLayout title="Favoritos">
-  <h1>Favoritos</h1>
+  <Title>Favoritos</Title>
 </MainLayout>
