refactor: Update Title and MainLayout components for better styling and layout

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -42,9 +42,9 @@ const {
       } -->
   </head>
 
-  <body class="bg-slate-800 text-slate-100">
+  <body class="bg-slate-800 text-slate-100 flex flex-col min-h-screen">
     <NavBar />
-    <main class="mt-10 m-auto max-w-3xl mx-4">
+    <main class="mt-10 mx-auto flex-grow w-full max-w-4xl px-4">
       <slot />
     </main>
   </body>
