feat: Add Counter component to favorites page

--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Counter } from '@components/Counter';
 import Title from '@components/shared/Title.astro';
 import MainLayout from '@layouts/MainLayout.astro';
 ---
