--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -3,6 +3,7 @@ const links = [
   { href: '/', text: 'Listado' },
   { href: '/pokemons/1', text: 'Paginado' },
   { href: '/favorites', text: 'Favoritos' },
+  { href: '/islands', text: 'Islas' },
 ];
 
 const currentPath = Astro.url.pathname;
