feat: Add FavoritePokemons component to favorites page

--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,9 +1,12 @@
 ---
 import { Counter } from '@components/Counter';
+import { FavoritePokemons } from '@components/pokemons/FavoritePokemons';
 import Title from '@components/shared/Title.astro';
 import MainLayout from '@layouts/MainLayout.astro';
 ---
 
 <MainLayout title="Favoritos">
   <Title>Favoritos</Title>
+
+  <FavoritePokemons client:idle />
 </MainLayout>
