--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -66,10 +66,11 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
 </MainLayout>
 
 <script>
-  interface FavoritePokemon {
-    name: string;
-    id: number;
-  }
+  import type { FavoritePokemon } from '@interfaces/favorite-pokemon';
+  // interface FavoritePokemon {
+  //   name: string;
+  //   id: number;
+  // }
 
   // document.addEventListener('astro:before-preparation', () => {
   //   console.log('astro:before-preparation');
